10/8/08 - moved list of rejected features to Unfuddle 806
8/11/08 - change screenshot, use hand soap as the liquid
# 1.00.00 (23294)
7/17/08 - confirm that all dev controls disappear when -dev commandline arg is not supplied
7/17/08 - organize imports
# 0.00.21 (23274)
7/17/08 - reimplement PrecisionDecimal, previous implementation using BigDecimal only worked for English
# 0.00.20 (23265)
7/16/08 - tweak clock framerate and faucet fill rates, tradeoff of animation smoothness and titration precision
7/16/08 - move clock constants into PHScaleConstants
7/16/08 - VolumeValue in model, limited to 2 decimals of precision
7/16/08 - generalize OnOffSliderNode and move to piccolo-phet
7/16/08 - FaucetSliderNode, a slider for linearly variable flow rates
7/16/08 - major changes to faucet controls to support variable flow rates
7/16/08 - major changes to Liquid fill/drain model to support variable flow rates
7/16/08 - rename MomentarySliderNode to OnOffSliderNode (to be deleted)
7/16/08 - delete MoleculeCountAlternateNode, associated developer controls, image files (out of sync with new H2O color)
7/16/08 - rename molecule image files
7/16/08 - get new H2O molecule SVG image from Archie
7/16/08 - add SVG assets for H3O and OH molecules
7/16/08 - remove space between number and L units label to save room
7/16/08 - reduce beaker width (15 pixels) to get space for volume value display
7/16/08 - add volume display to right edge of beaker, 2 decimals of precision
7/16/08 - beaker minor ticks spaced at 0.1L intervals
7/16/08 - beaker ticks labels at 1/2L and 1L only
7/19/08 - maximum beaker volume of 1.2L
7/16/08 - use RGB=[193, 222, 227] for water liquid & graph bar
7/16/08 - move all H3O/OH/H2O color specifications to PHScaleConstants
# 0.00.19 (23240)
7/15/08 - change type of Liquid's pH property from Double to PHValue
7/15/08 - implement PHValue as an extension of PrecisionDecimal, with 2 significant decimal places